Refactor of Tasks and added Main method